Update ThreadUtils.java
Updating threading 'engine' for virtual threading